<resources>
    <string name="app_name">슬슬</string>

    <!-- FCM -->
    <string name="default_notification_channel_id">슬슬</string>
    <string name="channel_name">슬슬</string>

    <!-- 백그라운드 -->
    <string name="channel_background_name">슬슬 백그라운드</string>

    <!--권한 허용 페이지-->
    <string name="permission_title">앱 접근 권한을\n꼭 허용해주세요.</string>
    <string name="permission_info">슬슬은 정보통신망법 준수 및 차별화된 막차 알림\n서비스를 제공하기 위해 꼭 필요한 아래 기능에\n접근하고 있습니다.</string>
    <string name="permission_bell_title">알림 수신 (필수)</string>
    <string name="permission_bell_info">막차 시간 알림 및 앱 실행 권고 알림</string>
    <string name="permission_location_title">위치 (필수)</string>
    <string name="permission_location_info">내 현재 위치 및 거주지 위치 확인</string>
    <string name="permission_btn">확인</string>
    <string name="permission_bullet">•</string>
    <string name="permission_explain1">\'정확한 위치 정보 허용\'은 막차 알림 서비스 제공을 위해 반드시 필요합니다. 권한을 허용하지 않은 경우 알림을 제한적으로 제공합니다.</string>
    <string name="permission_explain2">서비스 제공에 권한이 필요한 경우만 동의를 받고 있습니다.</string>
    <string name="permission_explain3">사용 중이 아니거나 종료된 상태일 때도 사용자의 위치 정보를 수집합니다. 이는 막차 경로와 알림을 정확하게 제공하기 위함입니다.</string>

    <!-- 메인 홈 페이지 -->
    <string name="home_location_setting">현재 거주하는 위치를 설정해주세요</string>
    <string name="home_status_alarm">설정된 알림 없음</string>
    <string name="home_add_alarm">알람 추가하기</string>
    <string name="home_empty_view_title">아직 경로를 볼 시간이 아니에요\n알림 설정 시간을 기준으로 경로를 제공합니다</string>
    <string name="home_alarm_on_off_title">막차 기준</string>
    <string name="home_alarm_term_empty">반복 없이 1회 알림</string>
    <string name="home_subway_route_info_title">막차 경로 안내</string>
    <string name="home_subway_header_transfer">최소환승</string>

    <!-- 알림 바텀 시트 -->
    <string name="alarm_bottom_sheet_essential">*</string>
    <string name="alarm_bottom_sheet_preferred_time">알림 희망 시간</string>
    <string name="item_alarm_preferred_time_last_subway_title">막차 기준</string>
    <string name="alarm_bottom_sheet_time_term">알림 반복</string>
    <string name="alarm_bottom_sheet_time_term_10">10분마다</string>
    <string name="alarm_bottom_sheet_time_term_20">20분마다</string>
    <string name="alarm_bottom_sheet_time_term_30">30분마다</string>
    <string name="alarm_bottom_sheet_time_term_40">40분마다</string>
    <string name="alarm_bottom_sheet_time_term_50">50분마다</string>
    <string name="alarm_bottom_sheet_time_term_60">60분마다</string>
    <string name="alarm_bottom_sheet_time_before_one">막차 기준 \u0020\u0020 1시간 전 알림</string>
    <string name="alarm_bottom_sheet_time_before_one_half">막차 기준 \u0020\u0020 1시간 30분 전 알림</string>
    <string name="alarm_bottom_sheet_time_before_two">막차 기준 \u0020\u0020 2시간 전 알림</string>
    <string name="alarm_bottom_sheet_time_before_two_half">막차 기준 \u0020\u0020 2시간 30분 전 알림</string>
    <string name="alarm_bottom_sheet_time_before_three">막차 기준 \u0020\u0020 3시간 전 알림</string>
    <string name="alarm_bottom_sheet_btn_ok">알림 설정</string>

    <!--상세 주소 설정 페이지 -->
    <string name="location_detail_title">상세 정보 입력</string>
    <string name="location_detail_home">본가</string>
    <string name="location_detail_one_room">자취방</string>
    <string name="location_detail_dormitory">기숙사</string>
    <string name="location_detail_etc">기타</string>
    <string name="location_detail_complete">완료</string>

    <!--주소 검색 페이지-->
    <string name="location_title">주소 설정</string>
    <string name="location_searchHint">예) 판교역로 235, 분당 주공, 삼평동 681</string>
    <string name="location_address">도로명 :&#160;</string>

    <!--설정 페이지-->
    <string name="setting_title">설정</string>
    <string name="setting_content1">이용약관</string>
    <string name="setting_content2">개인정보 처리방침</string>

    <!-- 커스텀 다이얼로그 -->
    <string name="location_before_dialog_title">주소 설정 전에는\n알림을 활성화할 수 없습니다</string>
    <string name="location_before_dialog_subtitle">알림을 받아보시려면 주소를 먼저 설정해주세요</string>
    <string name="location_before_dialog_ok">확인</string>

    <!-- 네트워크 다이얼로그 -->
    <string name="dialog_network_title">네트워크가 연결되지 않았습니다</string>
    <string name="dialog_network_body">Wi-Fi 또는 데이터를 활성화 해주세요</string>
    <string name="dialog_network_retry_btn">다시 시도</string>

    <!-- 경로 타이틀 -->
    <string name="item_subway_route_header_info_title">막차 경로 안내</string>
    <string name="item_subway_header_least_transfer">최소환승</string>

</resources>
