<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/permission_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/permission_title"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/permission_tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/permission_info"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/permission_tv_title"
        app:layout_constraintTop_toBottomOf="@id/permission_tv_title" />

    <!--알림 수신-->
    <ImageView
        android:id="@+id/permission_iv_bell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_tv_info" />


    <TextView
        android:id="@+id/permission_tv_bellTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/permission_bell_title"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/permission_iv_bell"
        app:layout_constraintTop_toTopOf="@+id/permission_iv_bell" />

    <TextView
        android:id="@+id/permission_tv_bellInfo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/permission_bell_info"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/permission_tv_bellTitle"
        app:layout_constraintTop_toBottomOf="@id/permission_tv_bellTitle" />

    <!--위치 허용-->
    <ImageView
        android:id="@+id/permission_iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="@id/permission_iv_bell"
        app:layout_constraintTop_toBottomOf="@id/permission_tv_bellInfo" />


    <TextView
        android:id="@+id/permission_tv_locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/permission_location_title"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/permission_iv_location"
        app:layout_constraintStart_toStartOf="@+id/permission_tv_bellInfo"
        app:layout_constraintTop_toBottomOf="@id/permission_tv_bellInfo" />

    <TextView
        android:id="@+id/permission_tv_locationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_location_info"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/permission_tv_locationTitle"
        app:layout_constraintTop_toBottomOf="@id/permission_tv_locationTitle" />

    <LinearLayout
        android:id="@+id/permission_layout_explain_container"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_gray_r4"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_tv_locationInfo">

        <TextView
            android:id="@+id/permission_tv_explain1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_explain1"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/permission_tv_explain2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:text="@string/permission_explain2"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_gray_r4"
        android:text="@string/permission_btn"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/permission_layout_explain_container"
        app:layout_constraintStart_toStartOf="@+id/permission_layout_explain_container" />


</androidx.constraintlayout.widget.ConstraintLayout>